--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
+    "deploy": "npm build --prefix client && npm start --prefix server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
