--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nasa-api---project",
+  "name": "nasa-project",
   "version": "1.0.0",
   "description": "Nodejs Backend Project",
   "main": "index.js",
@@ -10,8 +10,8 @@
     "server": "npm start --prefix server",
     "client": "npm start --prefix client",
     "watch": "npm run server & npm run client",
-    "deploy": "npm run build --prefix client && npm start --prefix server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "npm run build --prefix &client && npm start --prefix server",
+    "test": "npm test --prefix server && npm test --prefix client"
   },
   "repository": {
     "type": "git",
