--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.5",
     "express": "^4.18.2",
+    "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
