--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,14 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.5",
     "express": "^4.18.2",
+    "graphviz": "^0.0.9",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "dependency-cruiser": "^12.10.0",
     "jest": "^29.4.3"
   }
 }
