--- a/client/package.json
+++ b/client/package.json
@@ -35,5 +35,8 @@
   },
   "overrides": {
     "nth-check@1.0.2": "2.0.1"
+  },
+  "devDependencies": {
+    "dependency-cruiser": "^12.10.0"
   }
 }
