--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/davideperez/NASA-API---Project#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "graphviz": "^0.0.9"
   },
   "devDependencies": {
