--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.3.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphviz": "^0.0.9",
     "mongoose": "^6.10.0",
