--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/davideperez/NASA-API---Project#readme",
   "dependencies": {
     "axios": "^1.3.4",
-    "graphviz": "^0.0.9"
+    "graphviz": "^0.0.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "dependency-cruiser": "^12.10.0"
